--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -96,8 +96,8 @@
 /**
  * Reset Styels
  */
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,600,700,800,900|Nunito:300,400,500,600,700,700i&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap");
+//@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,600,700,800,900|Nunito:300,400,500,600,700,700i&display=swap");
+//@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap");
 
 * {
     -webkit-box-sizing: border-box;
