--- a/resources/assets/scss/structure/_header.scss
+++ b/resources/assets/scss/structure/_header.scss
@@ -24,6 +24,7 @@
             align-items: center;
             align-content: center;
         }
+
         .header-logo {
             overflow: hidden;
             margin-right: 45px;
@@ -34,6 +35,7 @@
 
             }
         }
+
         .header-menu {
             & > ul {
                 display: flex;
@@ -54,6 +56,60 @@
 
         ul li {
             color: $text-color;
+        }
+    }
+
+    .button-menu {
+        float: right;
+        width: 45px;
+        height: 45px;
+        display: none;
+        cursor: pointer;
+
+        span {
+            width: 36px;
+            height: 2px;
+            float: right;
+            z-index: 3;
+            display: block;
+            position: relative;
+            background-color: #000;
+
+            &:before,
+            &:after {
+                width: 36px;
+                height: 2px;
+                float: right;
+                z-index: 3;
+                display: block;
+                position: relative;
+                background-color: #000;
+            }
+
+            &:before {
+                top: -12px;
+                width: 30px;
+                content: "";
+            }
+
+            &:after {
+                width: 30px;
+                bottom: -10px;
+                content: "";
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .app-header {
+        .button-menu {
+            display: block;
+        }
+
+        .header-menu,
+        .button-login {
+            display: none !important;
         }
     }
 }
