--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -534,3 +534,21 @@
 body {
     background : red !important;
 }
+
+// Kourosh
+@media (max-width: 992px) {
+    .section-features-1 {
+        h3 {
+            font-size: 18px;
+            min-height: 60px !important;
+        }
+        .row {
+            margin-left: -9px;
+            margin-right: -9px;
+            > * {
+                padding-left: 9px;
+                padding-right: 9px;
+            }
+        }
+    }
+}
