--- a/resources/assets/scss/sections/_story.scss
+++ b/resources/assets/scss/sections/_story.scss
@@ -7,6 +7,7 @@
     .heading-holder {
         .el-heading {
             margin: 0 !important;
+
             p {
                 margin-bottom: 0 !important;
             }
@@ -17,6 +18,7 @@
     .story-container {
         padding-bottom: $space;
     }
+
     .story-image {
         //background: red;
         //border: solid 1px green;
@@ -29,6 +31,7 @@
             //position: absolute;
         }
     }
+
     .story-item {
 
 
@@ -58,7 +61,6 @@
 }
 
 
-
 /*------------------------------------
     DesignStory
 ------------------------------------*/
@@ -67,4 +69,38 @@
     max-width: 768px;
     margin: auto;
     margin-bottom: $space;
+}
+
+@media (max-width: 992px) {
+    .section-story {
+        .story-container {
+            .el-heading {
+                h2 {
+                    font-size: 24px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    .story-container:nth-child(even) .column-1 {
+        order: 1 !important;
+    }
+
+    .story-container:nth-child(even) .column-2 {
+        order: 1 !important;
+    }
+    .section-story  {
+        .story-image {
+            padding-top: 60px;
+        }
+        .display-center {
+            top: 0 !important;
+            left: 0 !important;
+            right: 0 !important;
+            bottom: 0 !important;
+            position: relative !important;
+            transform: inherit !important;
+        }
+    }
 }
