--- a/resources/assets/scss/elements/_heading.scss
+++ b/resources/assets/scss/elements/_heading.scss
@@ -35,7 +35,22 @@
     }
 }
 
-.section {
-    position: relative;
+@media (max-width: 992px) {
+    .el-heading {
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 27px;
+        }
+        .subtitle {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+    }
 }
-
