update features section styles on mobile

--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -531,11 +531,9 @@
 }
 
 
-body {
-    background : red !important;
-}
-
-// Kourosh
+/*------------------------------------
+    Features
+------------------------------------*/
 @media (max-width: 992px) {
     .section-features-1 {
         h3 {
@@ -552,3 +550,5 @@ body {
         }
     }
 }
+
+
