make responsive by kourosh

--- a/resources/assets/scss/structure/_header.scss
+++ b/resources/assets/scss/structure/_header.scss
@@ -113,3 +113,17 @@
         }
     }
 }
+
+.header-light {
+    .button-menu {
+        span {
+            background-color: #fff;
+
+            &:before,
+            &:after {
+
+                background-color: #fff;
+            }
+        }
+    }
+}
