--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -534,6 +534,7 @@
 /*------------------------------------
     Features
 ------------------------------------*/
+
 @media (max-width: 992px) {
     .section-features-1 {
         h3 {
@@ -551,4 +552,18 @@
     }
 }
 
+@media (max-width: 992px) {
+    .section-we-offer {
+        .story-image {
+            display: none;
+        }
+    }
+}
 
+
+@media (max-width: 992px) {
+    .display-spacing {
+        padding-top: 60px !important;
+        padding-bottom: 60px !important;
+    }
+}
