--- a/resources/assets/scss/sections/_hero.scss
+++ b/resources/assets/scss/sections/_hero.scss
@@ -74,7 +74,6 @@
     .inner {
 
 
-
         .brain {
             position: absolute;
             left: 0;
@@ -104,7 +103,6 @@
         }
 
 
-
         .circle {
 
             border-radius: 50%;
@@ -112,7 +110,7 @@
             position: absolute;
             width: 8px;
             height: 8px;
-            box-shadow: 0px 0px 18px 14px rgba(77,178,228,.3);
+            box-shadow: 0px 0px 18px 14px rgba(77, 178, 228, .3);
         }
 
 
@@ -125,7 +123,7 @@
             animation-name: animateUpDown;
             animation-iteration-count: infinite;
             animation-duration: 3s;
-            box-shadow: 0px 0px 16px 12px rgba(77,178,228,.3);
+            box-shadow: 0px 0px 16px 12px rgba(77, 178, 228, .3);
         }
 
 
@@ -138,7 +136,7 @@
             animation-name: animateUpDown;
             animation-iteration-count: infinite;
             animation-duration: 3s;
-            box-shadow: 0px 0px 16px 10px rgba(77,178,228,.3);
+            box-shadow: 0px 0px 16px 10px rgba(77, 178, 228, .3);
             background: #53c1f7;
         }
 
@@ -151,7 +149,7 @@
             animation-name: animateUpDown;
             animation-iteration-count: infinite;
             animation-duration: 1.9s;
-            box-shadow: 0px 0px 14px 10px rgba(77,178,228,.2);
+            box-shadow: 0px 0px 14px 10px rgba(77, 178, 228, .2);
 
         }
 
@@ -164,7 +162,7 @@
             animation-name: animateUpDown;
             animation-iteration-count: infinite;
             animation-duration: 2.7s;
-            box-shadow: 0px 0px 14px 11px rgba(77,178,228,.3);
+            box-shadow: 0px 0px 14px 11px rgba(77, 178, 228, .3);
             background: #53c1f7;
 
         }
@@ -208,8 +206,6 @@
         }
 
 
-
-
         .circle.c8 {
             width: 5px;
             height: 5px;
@@ -235,7 +231,6 @@
             background: #54c8ff;
 
         }
-
 
 
         .circle.c10 {
@@ -308,8 +303,6 @@
         img {
             transform: rotate(20deg);
             position: absolute;
-
-
 
 
             &.t1 {
@@ -400,7 +393,6 @@
 }
 
 
-
 /*
  * Hero Scroll
  */
@@ -485,13 +477,12 @@
 }
 
 
-.section-hero-mobile, .section-hero-ml , .section-hero-web {
+.section-hero-mobile, .section-hero-ml, .section-hero-web {
     p {
         color: white !important;
     }
 
 }
-
 
 
 /*------------------------------------
@@ -506,8 +497,59 @@
 @media (max-width: 992px) {
     .section-hero {
         .img-holder {
-            width: 450px;
+            left: 0;
+            right: 0;
+            width: 300px;
             bottom: -45px;
+            margin: auto;
+        }
+    }
+
+    .section-hero-9 {
+        position: relative;
+        z-index: 33;
+
+        .el-heading {
+            margin: 0 !important;
+
+            h1 {
+                font-size: 27px !important;
+            }
+
+            p,
+            .subtitle {
+                font-size: 14px !important;
+            }
+        }
+
+        &.concave {
+            &:before {
+                display: none !important;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .section-hero-9 {
+        .img-holder {
+            opacity: 1;
+            bottom: -111px !important;
+        }
+    }
+    .section-hero-web {
+        .img-holder {
+            display: none !important;
+        }
+    }
+    .section-hero-mobile {
+        .img-holder {
+            display: none !important;
+        }
+    }
+    .section-hero {
+        .hero-scroll {
+            display: none;
         }
     }
 }
